--- a/index.html
+++ b/index.html
@@ -27,57 +27,22 @@
 				<h1>Grant Griffiths</h1>
 				<p>Software Engineer<br>Alpinist & Climber</p>
 			</header>
-			<!--
-						<hr />
-						<h2>Extra Stuff!</h2>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field">
-									<input type="text" name="name" id="name" placeholder="Name" />
-								</div>
-								<div class="field">
-									<input type="email" name="email" id="email" placeholder="Email" />
-								</div>
-								<div class="field">
-									<select name="department" id="department">
-										<option value="">Department</option>
-										<option value="sales">Sales</option>
-										<option value="tech">Tech Support</option>
-										<option value="null">/dev/null</option>
-									</select>
-								</div>
-								<div class="field">
-									<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
-								</div>
-								<div class="field">
-									<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
-								</div>
-								<div class="field">
-									<label>But are you a robot?</label>
-									<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
-									<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
-								</div>
-							</div>
-							<ul class="actions special">
-								<li><a href="#" class="button">Get Started</a></li>
-							</ul>
-						</form>
-						<hr />
-						-->
+
 			<footer>
 				<ul class="icons">
 					<li><a href="https://twitter.com/griffithsgrant" class="icon fa-twitter">Twitter</a></li>
 					<li><a href="https://www.linkedin.com/in/gwgriffiths4/" class="icon fa-linkedin" ss="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/ggriffiths" class="icon fa-github">Github</a></li>
 					<li><a href="mailto:ggp493@gmail.com" class="icon fa-envelope-o">Email</a></li>
-				</ul>
+					<a href="https://medium.com/@grantgriffiths">Technical Blog</a><br>
+					<a href="https://medium.com/@grantgriffiths">Climbing Blog</a>
 			</footer>
 		</section>
 
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="copyright">
-				<li>&copy; Jane Doe</li>
+				<li>&copy; Grant Griffiths</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</footer>
