--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			<header>
 				<span class="avatar"><img src="images/avatar.png" alt="" /></span>
 				<h1>Grant Griffiths</h1>
-				<p>Software Engineer</p>
+				<p>Software Engineer @ Portworx</p>
+				<a href="/blog">Technical Blog</a><br>
 			</header>
 
 			<footer>
@@ -34,7 +35,6 @@
 					<li><a href="https://www.linkedin.com/in/gwgriffiths4/" class="icon fa-linkedin" ss="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/ggriffiths" class="icon fa-github">Github</a></li>
 					<li><a href="mailto:ggp493@gmail.com" class="icon fa-envelope-o">Email</a></li>
-					<a href="/blog">Technical Blog</a><br>
 			</footer>
 		</section>
 
