--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 			<header>
 				<span class="avatar"><img src="images/avatar.png" alt="" /></span>
 				<h1>Grant Griffiths</h1>
-				<p>Software Engineer @ Portworx</p>
-				<a href="/blog">Technical Blog</a><br>
+				<p>
+					Software Engineer<br>
+					<a href="/blog">Technical Blog</a>
+				</p>
+				
 			</header>
 
 			<footer>
