--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Identity by HTML5 UP
+	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -12,53 +12,46 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
 
 <body class="is-preload">
-
-	<!-- Wrapper -->
 	<div id="wrapper">
+		<div id="bg"></div>
+		<div id="overlay"></div>
+		<div id="main">
 
-		<!-- Main -->
-		<section id="main">
-			<header>
-				<span class="avatar"><img src="images/avatar.png" alt="" /></span>
+			<!-- Header -->
+			<header id="header">
 				<h1>Grant Griffiths</h1>
-				<p>
-					Software Engineer<br>
-					<a href="/blog">Technical Blog</a>
-				</p>
-				
+				<p>Software Engineer &nbsp;&bull;&nbsp; Climber</p>
+				<nav>
+					<ul>
+						<li><a href="https://twitter.com/griffithsgrant" class="icon brands fa-twitter"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/ggriffiths" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
+						<li><a href="https://ggriffiths.github.io/blog" class="icon brands fa-blog"><span
+									class="label">Blog</span></a></li>
+						<li><a href="mailto:gwgriffiths4@gmail.com" class="icon solid fa-envelope"><span
+									class="label">Email</span></a></li>
+					</ul>
+				</nav>
 			</header>
 
-			<footer>
-				<ul class="icons">
-					<li><a href="https://twitter.com/griffithsgrant" class="icon fa-twitter">Twitter</a></li>
-					<li><a href="https://www.linkedin.com/in/gwgriffiths4/" class="icon fa-linkedin" ss="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/ggriffiths" class="icon fa-github">Github</a></li>
-					<li><a href="mailto:ggp493@gmail.com" class="icon fa-envelope-o">Email</a></li>
+			<!-- Footer -->
+			<footer id="footer">
+				<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
 			</footer>
-		</section>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<ul class="copyright">
-				<li>&copy; Grant Griffiths</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</footer>
-
+		</div>
 	</div>
-
-	<!-- Scripts -->
 	<script>
-		if ('addEventListener' in window) {
-			window.addEventListener('load', function () { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
-			document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-		}
+		window.onload = function () { document.body.classList.remove('is-preload'); }
+		window.ontouchmove = function () { return false; }
+		window.onorientationchange = function () { document.body.scrollTop = 0; }
 	</script>
-
 </body>
 
 </html>
