--- a/index.html
+++ b/index.html
@@ -25,24 +25,26 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>Grant Griffiths</h1>
-				<p>Software Engineer &nbsp;&bull;&nbsp; Climber</p>
-				<nav>
-					<ul>
-						<li><a href="https://twitter.com/griffithsgrant" class="icon brands fa-twitter"><span
-									class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/ggriffiths" class="icon brands fa-github"><span
-									class="label">Github</span></a></li>
-						<li><a href="https://ggriffiths.github.io/blog" class="icon brands fa-blog"><span
-									class="label">Blog</span></a></li>
-						<li><a href="mailto:gwgriffiths4@gmail.com" class="icon solid fa-envelope"><span
-									class="label">Email</span></a></li>
-					</ul>
-				</nav>
+				<h2>Software Engineer &nbsp;&bull;&nbsp; Go &nbsp;&bull;&nbsp; Cloud Infrastructure </h2>
+				<h2>Climber &nbsp;&bull;&nbsp; Alpinist &nbsp;&bull;&nbsp; Trail Runner
+					<nav>
+						<ul>
+							<li><a href="https://twitter.com/griffithsgrant" class="icon brands fa-twitter"><span
+										class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/ggriffiths" class="icon brands fa-github"><span
+										class="label">Github</span></a></li>
+							<li><a href="https://ggriffiths.github.io/blog" class="icon solid fa-blog"><span
+										class="label">Blog</span></a></li>
+							<li><a href="mailto:gwgriffiths4@gmail.com" class="icon solid fa-envelope"><span
+										class="label">Email</span></a></li>
+						</ul>
+					</nav>
 			</header>
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+				<span class="copyright">&copy; Grant Griffiths. Design: <a href="http://html5up.net">HTML5
+						UP</a>.</span>
 			</footer>
 
 		</div>
