--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 				<h2>Climber &nbsp;&bull;&nbsp; Alpinist &nbsp;&bull;&nbsp; Trail Runner
 					<nav>
 						<ul>
-							<li><a href="https://twitter.com/griffithsgrant" class="icon brands fa-twitter"><span
-										class="label">Twitter</span></a></li>
 							<li><a href="https://github.com/ggriffiths" class="icon brands fa-github"><span
 										class="label">Github</span></a></li>
 							<li><a href="https://ggriffiths.github.io/blog" class="icon solid fa-blog"><span
 										class="label">Blog</span></a></li>
+							<li><a href="https://twitter.com/griffithsgrant" class="icon brands fa-twitter"><span
+										class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/gwgriffiths4/"
+									class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="mailto:gwgriffiths4@gmail.com" class="icon solid fa-envelope"><span
 										class="label">Email</span></a></li>
 						</ul>
