--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Grant Griffiths</title>
+	<title>Immanuel Pabon</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<h1>Grant Griffiths</h1>
+				<h1>Immanuel Pabon</h1>
 				<h2>Software Engineer &nbsp;&bull;&nbsp; Go &nbsp;&bull;&nbsp; Cloud Infrastructure </h2>
 				<h2>Climber &nbsp;&bull;&nbsp; Alpinist &nbsp;&bull;&nbsp; Trail Runner
 					<nav>
@@ -45,7 +45,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy; Grant Griffiths. Design: <a href="http://html5up.net">HTML5
+				<span class="copyright">&copy; Immanuel Pabon. Design: <a href="http://html5up.net">HTML5
 						UP</a>.</span>
 			</footer>
 
